# FastCode

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  2d-studio-ebridge-fastcode.code-workspace  AGENTS.md  AUDIT-REPORT.md  CHANGELOG.md  CICD-RECOMMENDATIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MONKEY-TEST-RESULTS.md  README.md  ROADMAP.md  TEST-PLAN.md  api.py  auth-coverage.toml  bandit.yaml  docker-compose.yml  main.py  mcp_server.py  module.ebridge.yaml  pyproject.toml  requirements.txt  run_nanobot.sh  web_app.py
.ai/: RULES.md
.claude/skills/fastcode-search/: SKILL.md
.claude/skills/kg-query/: SKILL.md
.claude/skills/reindex/: SKILL.md
.github/workflows/: ci.yml
config/: config.yaml
docs/: API.md  ARCHITECTURE.md  MCP.md  OPERATIONS.md  README.md  SECURITY.md
docs/adr/: 0001-ship-submodule-docs-in-tree.md
docs/explanation/: README.md
docs/how-to/: README.md
docs/reference/: README.md  cross-repo-indexing.md
docs/tutorials/: README.md
evaluation/: __init__.py  golden_dataset.py  metrics.py  runner.py
evaluation/datasets/: fastcode_self.json
fastcode/: __init__.py  agent_tools.py  answer_generator.py  cache.py  call_extractor.py  definition_extractor.py  embedder.py  graph_builder.py  indexer.py  iterative_agent.py  llm_utils.py  loader.py  main.py  module_resolver.py  parser.py  path_utils.py  query_processor.py  repo_overview.py  repo_selector.py  reranker.py  retriever.py  symbol_resolver.py  tenant_context.py  tree_sitter_parser.py  utils.py  vector_store.py  workspace_registry.py
fastcode/embedding_providers/: __init__.py  api.py  base.py  factory.py  local_st.py  ollama.py
fastcode/vector_stores/: __init__.py  base.py  factory.py  faiss_store.py  qdrant_store.py
nanobot/: Dockerfile  pyproject.toml
nanobot/bridge/: package-lock.json  package.json
nanobot/nanobot/agent/: context.py  loop.py  skills.py  subagent.py
nanobot/nanobot/agent/tools/: fastcode.py  filesystem.py  shell.py
nanobot/nanobot/channels/: dingtalk.py  feishu.py  manager.py  slack.py  telegram.py  whatsapp.py
nanobot/nanobot/cli/: commands.py
nanobot/nanobot/config/: loader.py  schema.py
nanobot/nanobot/cron/: service.py
nanobot/nanobot/heartbeat/: service.py
nanobot/nanobot/providers/: litellm_provider.py  transcription.py
nanobot/tests/: __init__.py  test_smoke.py
scripts/: migrate_index_to_namespaced.py
tests/: conftest.py  test_api.py  test_delete_by_filter.py  test_embedding_providers.py  test_evaluation.py  test_graph_enhanced_rag.py  test_graph_expansion.py  test_incremental_indexing.py  test_incremental_indexing_regressions.py  test_language_expansion.py  test_matryoshka.py  test_mcp_server.py  test_metadata_migration.py  test_model_routing.py  test_monkey.py  test_repo_selector_namespace.py  test_reranker.py  test_security.py  test_semantic_cache.py  test_tenant_context.py  test_tree_sitter_parser.py  test_vector_stores.py  test_workspace_registry.py
