[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcode-ebridge"
version = "0.0.0"
description = "FastCode submodule (e-Bridge); metadata for tooling only — install via requirements.txt"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Shared workspace contracts (Keycloak auth for MCP server)
    "ebridge-shared[auth]",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "httpx"]
# Extra tree-sitter grammars used when tree-sitter-language-pack is
# unavailable (e.g. slim container builds). See FINDING-EXT-C-010.
# NOTE: requirements.txt is the CI source of truth for runtime deps; this
# extra exists so `pip install -e .[languages]` works in dev environments.
# tree-sitter-swift has only 0.0.1 on PyPI at the time of pinning — the
# stronger >=0.7.0 floor requested in the remediation plan does not yet
# exist upstream.
languages = [
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-kotlin>=1.0.0",
    "tree-sitter-swift>=0.0.1",
]

[tool.setuptools.packages.find]
include = ["fastcode*", "evaluation*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    "integration: requires live infrastructure (DB, NATS, Docker)",
    "slow: execution time >10s",
    "llm: requires LLM API keys (ANTHROPIC_API_KEY or OPENAI_API_KEY)",
    "database: requires PostgreSQL or MySQL connection",
    "nats_live: requires live NATS JetStream server",
]

[tool.ruff]
extend = "../config/ruff-base.toml"
line-length = 88
target-version = "py311"
extend-exclude = ["nanobot", "vendor", ".agent"]

[tool.ruff.lint]
ignore = ["B904", "SIM102", "B008"]

[tool.coverage.run]
source = ["fastcode", "api", "mcp_server"]
branch = true

[tool.coverage.report]
fail_under = 15
omit = ["*/tests/*", "*/test_*.py"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_error_codes = true

# Ratchet: type-check public entrypoints first; remove ignores as `fastcode/` is cleaned up.
[[tool.mypy.overrides]]
module = ["fastcode", "fastcode.*"]
ignore_errors = true
